PanIndia/force-app/main/default/objects/Applicant_Address__c/Applicant_Address__c.object-meta.xml
<CustomObject>
    <label>Applicant Address</label>
    <nameField>
        <displayFormat>AddressID-{0000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>