PanIndia/force-app/main/default/objects/Applicant_Address__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicant Addresses</relationshipLabel>
    <relationshipName>Applicant_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>