PanIndia/force-app/main/default/objects/Applicant_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Delhi City</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Kathmandu City</fullName>
            </value>
            <value>
                <fullName>Colombo City</fullName>
            </value>
            <value>
                <fullName>Lahore City</fullName>
            </value>
            <value>
                <fullName>Dhaka City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>