PanIndia/force-app/main/default/objects/Applicant_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Kathmandu</fullName>
            </value>
            <value>
                <fullName>Colombo</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Dhaka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>